--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">Jogo da Comunidade</a>
+            <a class="navbar-brand" href="/SiteJogoComunidade/index.html">Jogo da Comunidade</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,13 +24,13 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Início</a>
+                    <a class="nav-link" href="/SiteJogoComunidade/index.html">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/downloads.html">Downloads</a>
+                    <a class="nav-link" href="/SiteJogoComunidade/downloads.html">Downloads</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="/about.html">Sobre</a>
+                    <a class="nav-link disabled" href="/SiteJogoComunidade/about.html">Sobre</a>
                 </li>
             </div>
             </div>
