--- a/downloads.html
+++ b/downloads.html
@@ -60,7 +60,7 @@
     <br>
 
     <div class="d-flex align-items-center justify-content-center pb-4">
-        Todos os direitos reservados à <a href="https://www.youtube.com/@zegfy6414" class="px-1">@zegfy6414</a> | 2024
+        Todos os direitos reservados à <a href="https://www.youtube.com/@zegfy" class="px-1">@zegfy</a> | 2024
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
